--- a/SISERP/SISERP.csproj
+++ b/SISERP/SISERP.csproj
@@ -110,5 +110,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ALMACEN\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
