--- a/CAPA_NEGOCIOS/CAPA_NEGOCIOS.csproj
+++ b/CAPA_NEGOCIOS/CAPA_NEGOCIOS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADMINISTRADOR\NEG_ADMINISTRADOR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
