--- a/CAPA_NEGOCIOS/CAPA_NEGOCIOS.csproj
+++ b/CAPA_NEGOCIOS/CAPA_NEGOCIOS.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADMINISTRADOR\NEG_ADMINISTRADOR.cs" />
+    <Compile Include="CONTABILIDAD\NEG_CON_PLAN_CONTABLE.cs" />
+    <Compile Include="CONTABILIDAD\NEG_CON_PLAN_CONTABLE_SUB_CUENTAS.cs" />
+    <Compile Include="CONTABILIDAD\NEG_CON_PLAN_CONTABLE_TIPO_CUENTA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
