--- a/SISERP/App.config
+++ b/SISERP/App.config
@@ -2,7 +2,8 @@
 <configuration>
 	<connectionStrings>
 		<!--<add name="CONEXION" connectionString=" server = 172.16.1.59\SQLGRD ; database = halconSoft ; user = ADM ;  password  =  ADM" />-->
-		<add name="CONEXION" connectionString="server=DESKTOP-2IPCVGT ; database=bd_halconsoft ; integrated security = true" />
+		<add name="CONEXION" connectionString="server=El_Davis_LLacza ; database=bd_siserp ; integrated security = true" />
+		<!--<add name="cadena" connectionString="server=El_Davis_LLacza; database=bd_siserp; user=root; password=;" />-->
 		<add name="DefaultConnection" connectionString="Data Source = |SQL/CE| " />
 	</connectionStrings>
 	
